--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,17 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "postgres",
-    "database": "group_chat",
+    "username": "root",
+    "password": null,
+    "database": "database_development",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "mysql"
   },
   "test": {
-    "username": "postgres",
-    "password": "postgres",
-    "database": "group_chat_test",
+    "username": "root",
+    "password": null,
+    "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "mysql"
   },
   "production": {
     "username": "root",
