fix: adjust app, routes, & bin

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npx nodemon bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
